<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
  
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="215dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
       >

        <TextView
            android:id="@+id/lbl_simplePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/textf"
            android:text="@string/lbl_smplpay"
            android:textSize="20dp"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <RadioButton
                android:id="@+id/small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
              
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/large"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/large" />
 
   </RadioGroup>
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
                  <TextView
                 android:id="@+id/other"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                
                 android:paddingLeft="@dimen/tvleft"
                 android:text="@string/other"
                 android:textSize="18dp"
                 android:visibility="visible" />

 <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Enter"
                    android:inputType="numberDecimal"
                    android:minWidth="100dp"                  
                    
                    />
                           
             </TableRow>
             </TableLayout>
        
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnDon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/donatex" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:onClick="@string/exit"
        android:text="@string/exit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" 
          android:layout_margin="30dp"
        >
    </LinearLayout>
 
      </LinearLayout> 
